[workspace]
resolver = "2"
members = [
    "anker",
    "cli/maintainer",
    "cli/common",
    "cli/listener",
    "multisig/programs/multisig",
    "program",
    "testlib",
]

# Ensure that we don't leave half a program running if something in a thread panics.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# We take our fork of Solana 1.7.8, which has one patch applied:
# https://github.com/solana-labs/solana/pull/21415.
# This patch enables testing more situations using solana-program-test.
# We need to override the other Solana packages as well because they are interdependent,
# and if we don’t override them, Cargo will include two incompatible versions of those
# packages (one from crates.io and one from the fork).
[patch.crates-io]
solana-frozen-abi = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-frozen-abi-macro = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-program = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-program-test = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }
solana-sdk = { git = "https://github.com/ChorusOne/solana", branch = "program-test-178" }

# https://github.com/tiny-http/tiny-http/pull/225
tiny_http = { git = "https://github.com/ruuda/tiny-http", rev = "3568e8880f995dd0348feff9e29645fce995b534" }
