[workspace]
resolver = "2"
members = [
    "anker",
    "cli/maintainer",
    "cli/common",
    "cli/listener",
    "multisig/programs/multisig",
    "program",
    "testlib",
]

# Ensure that we don't leave half a program running if something in a thread panics.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# patch Anchor 0.13 to be able to use Solana 1.9.28
[patch.crates-io]
anchor-lang = { git = "https://github.com/lidofinance/anchor", branch = "solana-v1.9.28" }

# https://github.com/tiny-http/tiny-http/pull/225
tiny_http = { git = "https://github.com/ruuda/tiny-http", rev = "3568e8880f995dd0348feff9e29645fce995b534" }
