[package]
authors = ["Chorus One <techops@chorus.one>"]
license = "GPL-3.0"
edition = "2018"
name = "anker"
version = "1.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
bech32 = "0.8.1"
borsh = "0.9.1"
lido = {path = "../program", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.121"
solana-program = "1.7.8"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }

[dev-dependencies]
testlib = { path = "../testlib"}
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]
