[package]
authors = ["Chorus One <techops@chorus.one>"]
description = "Solido Command-line Utility"
license = "GPL-3.0"
edition = "2018"
name = "solido-cli"
version = "0.1.0"

[dependencies]
anchor-client = "0.4.4"
anchor-lang = "0.4.4"
bincode = "1.3.1"
borsh = "0.8"
bs58 = "0.4.0"
clap = "3.0.0-beta.2"
lido = {path = "../program", features = ["no-entrypoint"]}
multisig = {path = "../multisig/programs/multisig"}
num-traits = "0.2"
num_cpus = "1.0"
rand = "0.8.3"
serde = "1.0"
serde_json = "1.0"
solana-account-decoder = "1.7.3"
solana-clap-utils = "1.7.3"
solana-cli-config = "1.7.3"
solana-client = "1.7.3"
solana-logger = "1.7.3"
solana-program = "1.7.3"
solana-remote-wallet = "1.7.3"
solana-sdk = "1.7.3"
solana-stake-program = "1.7.3"
solana-vote-program = "1.7.3"
spl-associated-token-account = "1.0.2"
spl-token = "3.1.1"
tiny_http = "0.8.2"
uriparse = "0.6.3"

[[bin]]
name = "solido"
path = "src/main.rs"
