[package]
authors = ["Chorus One <techops@chorus.one>"]
description = "Solido Command-line Utility"
license = "GPL-3.0"
edition = "2018"
name = "solido-cli"
version = "0.1.0"

[dependencies]
anchor-client = "0.13.2"
anchor-lang = "0.13.2"
bincode = "1.3.1"
borsh = "0.9.1"
bs58 = "0.4.0"
clap = "3.0.0-beta.2"
lido = {path = "../program", features = ["no-entrypoint"]}
serum-multisig = {path = "../multisig/programs/multisig"}
num-traits = "0.2"
num_cpus = "1.0"
rand = "0.8.3"
serde = "1.0"
serde_json = "1.0"
solana-account-decoder = "1.7.8"
solana-clap-utils = "1.7.8"
solana-cli-config = "1.7.8"
solana-client = "1.7.8"
solana-logger = "1.7.8"
solana-program = "1.7.8"
solana-remote-wallet = "1.7.8"
solana-sdk = "1.7.8"
solana-stake-program = "1.7.8"
solana-vote-program = "1.7.8"
spl-associated-token-account = "1.0.2"
spl-token = "3.1.1"
tiny_http = "0.8.2"
uriparse = "0.6.3"

[[bin]]
name = "solido"
path = "src/main.rs"
