[package]
authors = ["Chorus One <techops@chorus.one>"]
edition = "2018"
name = "lido"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.1"
borsh = "0.8"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = "1.0.121"
serde_derive = "1.0.103"
solana-program = "1.7.3"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "0.10"
rand = "0.7.3"
solana-program-test = "1.7.3"
solana-sdk = "1.7.3"
solana-vote-program = "1.7.3"

[dev-dependencies.spl-memo]
features = ["no-entrypoint"]
version = "3.0.1"

[lib]
crate-type = ["cdylib", "lib"]
