[package]
authors = ["Chorus One <techops@chorus.one>"]
license = "GPL-3.0"
edition = "2018"
name = "lido"
version = "1.3.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.137"
serde_derive = "1.0.137"
solana-program = "1.9.28"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
arrayref = "0.3"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0"
solana-program-test = "1.9.28"
solana-sdk = "1.9.28"
solana-vote-program = "1.9.28"
testlib = { path = "../testlib" }

[lib]
crate-type = ["cdylib", "lib"]
