[package]
authors = ["Chorus One <techops@chorus.one>"]
license = "GPL-3.0"
edition = "2018"
name = "testlib"
version = "1.2.0"

[dependencies]
borsh = "0.9.3"
lido = { path = "../program" }
num-derive = "0.3"
num-traits = "0.2"
rand = "0.7.3"
serde = "1.0.137"
serde_derive = "1.0.137"
solana-program = "1.9.28"
solana-program-test = "1.9.28"
solana-sdk = "1.9.28"
solana-vote-program = "1.9.28"
spl-memo = "3.0.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
