[package]
authors = ["Chorus One <techops@chorus.one>"]
description = "Solido common client implementation"
license = "GPL-3.0"
edition = "2018"
name = "solido-cli-common"
version = "1.3.6"

[dependencies]
anchor-lang = "0.13.0"
bincode = "1.3"
lido = { path = "../../program", features = ["no-entrypoint"] }
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
serum-multisig = { path = "../../multisig/programs/multisig" }
solana-account-decoder = "1.9.28"
solana-client = "1.9.28"
solana-config-program = "1.9.28"
solana-program = "1.9.28"
solana-sdk = "1.9.28"
solana-stake-program = "1.9.28"
solana-vote-program = "1.9.28"
solana-transaction-status = "1.9.28"
spl-token = "3.1.1"
rusqlite = "0.26.3"
borsh = "0.9.3"
