[package]
authors = ["Chorus One <techops@chorus.one>"]
description = "Solido utility for indexing price data"
license = "GPL-3.0"
edition = "2018"
name = "listener"
version = "1.3.6"

[dependencies]
rusqlite = "0.26.3"
solana-client = "1.9.28"
solana-sdk = "1.9.28"
solana-logger = "1.9.28"
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4.19"
solido-cli-common = { path = "../common" }
tiny_http = "0.11.0"
url = "2.2.2"
num_cpus = "1.13"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
lido = { path = "../../program", features = ["no-entrypoint"] }

[dev-dependencies]
arbitrary = { version = "1.1.0", features = ["derive"] }
