[package]
authors = ["Chorus One <techops@chorus.one>"]
description = "Solido Command-line Utility"
license = "GPL-3.0"
edition = "2018"
name = "solido-cli"
version = "1.3.2"

[dependencies]
anchor-lang = "0.13.0"
anker = { path = "../../anker", features = ["no-entrypoint"] }
bincode = "1.3.1"
borsh = "0.9.1"
bs58 = "0.4.0"
clap = { version = "3.1.6", features = ["derive"] }
derivation-path = "0.1.3"
lido = {path = "../../program", features = ["no-entrypoint"]}
num-traits = "0.2"
num_cpus = "1.0"
rand = "0.8.3"
serde = "1.0"
serde_json = "1.0"
serum-multisig = {path = "../../multisig/programs/multisig"}
solana-account-decoder = "1.9.28"
solana-clap-utils = "1.9.28"
solana-cli-config = "1.9.28"
solana-client = "1.9.28"
solana-config-program = "1.9.28"
solana-logger = "1.9.28"
solana-program = "1.9.28"
solana-remote-wallet = "1.9.28"
solana-sdk = "1.9.28"
solana-stake-program = "1.9.28"
solana-vote-program = "1.9.28"
spl-associated-token-account = "1.0.2"
spl-token = "3.1.1"
spl-token-swap = "2.1.0"
tiny_http = "0.8.2"
uriparse = "0.6.3"
itertools = "0.10.1"
solido-cli-common = { path = "../common" }

[[bin]]
name = "solido"
path = "src/main.rs"
